Adicionei um paragrafo

--- a/SiteExemplo/index.html
+++ b/SiteExemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo, eu sou o novo Pogramador.</h1>
     <hr>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae fuga dolor, ullam voluptatem est quaerat obcaecati, blanditiis laboriosam voluptatum praesentium neque. Accusamus, odio. Dolorum, ad perspiciatis nostrum est dolore minus!
+    <hr>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error unde quam, perspiciatis doloribus optio debitis ad sed quaerat? Consectetur earum quisquam iure accusantium blanditiis quia ipsa rerum quos commodi dolorum!
 </body>
 </html>
